--- a/html/resumen.html
+++ b/html/resumen.html
@@ -31,7 +31,7 @@
       <div class="address"><a href="https://goo.gl/maps/fiTBGT6Vnhy"><i class="fas fa-map-marker"></i><span>Madrid</span></a>
       </div>
       <div class="email"><a href="mailto:javiermenendeza0112@gmail.com"><i class="fas fa-envelope"></i><span>JavierMenendez</span></a></div>
-      <div class="website"><a href="http://astronaomical.com/" target="_blank"> <i class="fas fa-home"></i><span>Web Personal</span></a></div>
+      <div class="website"><a href="https://javiermenendeza.github.io/PersonalPage/" target="_blank"> <i class="fas fa-home"></i><span>Web Personal</span></a></div>
     </div>
 <!--     <div class="follow">
       <h3>Follow Me</h3>
