actualizacion agosto acens

--- a/html/trabajo.html
+++ b/html/trabajo.html
@@ -143,6 +143,56 @@
     </div>
   </div>
 
+  <div class="card">
+    <div class="card__image-holder">
+      <img class="card__image" style="margin-top: 12px;" src="  <div class="card">
+        <div class="card__image-holder">
+          <img class="card__image" style="margin-top: 12px;" src="https://img.freepik.com/free-vector/colorful-science-education-background_23-2148490697.jpg?t=st=1656519858~exp=1656520458~hmac=e088214d5edc8229f9e76199692e95d04163c28124dfb1bcaab3fa9d12f27563&w=1380" alt="field" />
+        </div>
+        <div class="card-title">
+          <a href="#" class="toggle-info btn">
+            <span class="left"></span>
+            <span class="right"></span>
+          </a>
+          <h2>
+              Técnico Informático
+              <small>www.acens.com</small>
+          </h2>
+        </div>
+        <div class="card-flap flap1">
+          <div class="card-description">
+            Puesto como técnico informático en departamento de soporte y dominios de Acens parte de telefónica, experiencia en el puesto en soporte técnico tanto de dominios como del propio alojamiento ofrecido asi como certificados SSL, administracion de BBDD en MySQL y OracleSQL, administracion de correos y cuentas partners de microsoft 365.
+          </div>
+          <div class="card-flap flap2">
+            <div class="card-actions">
+              <!-- <a href="#" class="btn">Read more</a> -->
+            </div>
+          </div>
+        </div>
+      </div>" alt="field" />
+    </div>
+    <div class="card-title">
+      <a href="#" class="toggle-info btn">
+        <span class="left"></span>
+        <span class="right"></span>
+      </a>
+      <h2>
+          Desarrollo Web
+          <small>www.yekzyscience.es</small>
+      </h2>
+    </div>
+    <div class="card-flap flap1">
+      <div class="card-description">
+        Proyecto de plataforma con soporte de Física y Química para profesores de SEK El Castillo con herramientas interactivas y videos explicativos; desarrollado en HTML/CSS/JavaScript
+      </div>
+      <div class="card-flap flap2">
+        <div class="card-actions">
+          <!-- <a href="#" class="btn">Read more</a> -->
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 
   <!-- <div class="card">
