--- a/html/resumen.html
+++ b/html/resumen.html
@@ -33,17 +33,6 @@
       <div class="email"><a href="mailto:javiermenendeza0112@gmail.com"><i class="fas fa-envelope"></i><span>JavierMenendez</span></a></div>
       <div class="website"><a href="https://javiermenendeza.github.io/PersonalPage/" target="_blank"> <i class="fas fa-home"></i><span>Web Personal</span></a></div>
     </div>
-<!--     <div class="follow">
-      <h3>Follow Me</h3>
-      <div class="box">
-        <a href="https://www.facebook.com/astronaomical/" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a href="https://www.instagram.com/astronaomical/" target="_blank"><i class="fab fa-instagram "></i></a>
-        <a href="https://www.pinterest.com/astronaomical/" target="_blank"><i class="fab fa-pinterest"></i></a>
-        <a href="https://www.linkedin.com/in/naomi-weatherford-758385112/" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://codepen.io/astronaomical/" target="_blank"><i class="fab fa-codepen"></i></a>
-        <a href="https://www.behance.net/astronaomical" target="_blank"><i class="fab fa-behance"></i></a>
-      </div>
-    </div> -->
   </div>
   <div class="func">
     <div class="work">
@@ -52,6 +41,7 @@
         <li><span>Técnico Informático -<br>Reparacion Ordenadores</span><small>Reparacion Portatiles Madrid</small><small>Abr 2021 - Sep 2021</small></li>
         <li><span>Desarrollo Web</span><small>DataSystem</small><small>Sep 2021 - Dic 2021</small></li>
         <li><span>Técnico Informático</span><small>DataSystem</small><small>Ene 2022 - Jul 2022</small></li>
+        <li><span>Técnico Informático</span><small>Acens AcensTechnologies</small><small>Jul 2022 - Ago  2022</small></li>
       </ul>
     </div>
     <div class="edu">
