--- a/menu/menu.html
+++ b/menu/menu.html
@@ -17,9 +17,9 @@
 <div class="Menu">
   <ul class="Menu-list" data-offset="10">
     <li class="Menu-list-item animate__animated animate__lightSpeedInLeft " data-offset="20" onclick>
-      <a href="../html/resumen.html">Resumen
-      <span class="Mask"><span>Resumen</span></span>
-      <span class="Mask"><span>Resumen</span></span>
+      <a href="../html/resumen.html">Test
+      <span class="Mask"><span>Test</span></span>
+      <span class="Mask"><span>Test</span></span>
       </a>
     </li>
     <li class="Menu-list-item animate__animated animate__lightSpeedInRight animate__delay-1s" data-offset="16" onclick>
