--- a/html/resumen.html
+++ b/html/resumen.html
@@ -5,6 +5,7 @@
   <title>Resumen</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 <link rel="stylesheet" href="../style/ResumenStyle.css">
 
 </head>
@@ -19,18 +20,20 @@
       </div>
       <div class="info">
         <h1 class="name">Javier Menéndez Abreu</h1>
-        <h2 class="job">Técnico Informático</h2>
+        <h2 class="job"><!-- Técnico Informático --></h2>
       </div>
     </div>
     <div class="about">
-      <h3>Sobre mí</h3>Soy tecnico informático y futuro programador estudiando actualmente DAM y con experiencia en el sector de los Sistemas Microinformaticos, las redes y el desarrollo Web
+      <h3>Sobre mí</h3>
+      <p>Desde que comencé mis estudios en sistemas, me di cuenta de que la tecnología es mi verdadera pasión. Luego, al sumergirme en la programación, encontré una nueva forma de entender y resolver problemas. He tenido la oportunidad de trabajar en ambos campos, lo que me ha permitido combinar mis conocimientos técnicos con mi creatividad para encontrar soluciones efectivas. Me impulsa la curiosidad por aprender y mejorar constantemente, y disfruto cada momento en el que puedo transformar una idea en algo real y funcional. La tecnología no solo es mi trabajo, es lo que realmente me motiva y me mantiene en constante evolución.</p>
     </div>
     <div class="contact">
       <h3>Contacto</h3>
-      <div class="call"><a href="tel:123-456-7890"><i class="fas fa-phone"></i><span>632-199-366</span></a></div>
+      <div class="call"><a href="tel:123-456-7890"><i class="fas fa-phone"></i><span>604-840-097</span></a></div>
       <div class="address"><a href="https://goo.gl/maps/fiTBGT6Vnhy"><i class="fas fa-map-marker"></i><span>Madrid</span></a>
       </div>
-      <div class="email"><a href="mailto:javiermenendeza0112@gmail.com"><i class="fas fa-envelope"></i><span>JavierMenendez</span></a></div>
+      <div class="email"><a href="mailto:javiermenendeza0112@gmail.com"><i class="fas fa-envelope"></i><span>Javier Menéndez</span></a></div>
+      <div class="website"><a href="https://github.com/darkone0112" target="_blank"> <i class="fa-solid fa-code-commit"></i><span>GitHub</span></a></div>
       <div class="website"><a href="https://javiermenendeza.github.io/PersonalPage/" target="_blank"> <i class="fas fa-home"></i><span>Web Personal</span></a></div>
     </div>
   </div>
@@ -38,49 +41,64 @@
     <div class="work">
       <h3><i class="fa fa-briefcase"></i>Experiencia</h3>
       <ul>
-        <li><span>Técnico Informático -<br>Reparacion Ordenadores</span><small>Reparacion Portatiles Madrid</small><small>Abr 2021 - Sep 2021</small></li>
-        <li><span>Desarrollo Web</span><small>DataSystem</small><small>Sep 2021 - Dic 2021</small></li>
-        <li><span>Técnico Informático</span><small>DataSystem</small><small>Ene 2022 - Jul 2022</small></li>
+        <li><span>Técnico Informático</span><small>Ceva Logistics</small><small>Sep 2022 - Actualmente</small></li>
         <li><span>Técnico Informático</span><small>Acens AcensTechnologies</small><small>Jul 2022 - Ago  2022</small></li>
+        <li><span>Desarrollo Web</span><small>DataSystem</small><small>Ene 2022 - Jul 2022</small></li>
+        <li><span>Técnico Informático</span><small>DataSystem</small><small>Sep 2021 - Dic 2021</small></li>
       </ul>
     </div>
     <div class="edu">
       <h3><i class="fa fa-graduation-cap"></i>Education</h3>
       <ul>
+        <li><span>Desarrollo de Aplicaciones Multiplataformas</span><small>IES Juan de la Cierva</small><small>Sep. 2021 - Jun.2023</small></li>
+        <li><span>Administración de Sistemas Informáticos y Redes</span><small></small><small>IES Juan de la Cierva</small><small>Sept. 2019 - Jun. 2021</small></li>
         <li><span>Bachillerato <br></span>Científico-Técnico<small>IHS Mater Purissima</small><small>Sep. 2017 - Jun. 2019</small></li>
-        <li><span>Grado Medio</span><small>Sistemas MicroInformáticos y Redes</small>IES Juan de la Cierva<small>Sept. 2019 - Jun. 2021</small></li>
-        <li><span>Grado Superior</span>Desarrollo de Aplicaciones Multiplataformas<small>IES Juan de la Cierva</small><small>Sep. 2021 - Actualmente</small></li>
       </ul>
     </div>
     <div class="skills-prog">
       <h3><i class="fas fa-code"></i>Habilidades Programación</h3>
       <ul>
-        <li data-percent="95"><span>HTML5</span>
+        <li data-percent="90"><span>HTML5</span>
           <div class="skills-bar">
             <div class="bar"></div>
           </div>
         </li>
-        <li data-percent="90"><span>CSS3 & SCSS</span>
+        <li data-percent="80"><span>CSS3 & SCSS</span>
           <div class="skills-bar">
             <div class="bar"></div>
           </div>
         </li>
-        <li data-percent="70"><span>Java</span>
+        <li data-percent="40"><span>JS</span>
           <div class="skills-bar">
             <div class="bar"></div>
           </div>
         </li>
-        <li data-percent="60"><span>Python</span>
+        <li data-percent="80"><span>Java</span>
           <div class="skills-bar">
             <div class="bar"></div>
           </div>
         </li>
-        <li data-percent="50"><span>PL/SQL</span>
+        <li data-percent="90"><span>Python</span>
           <div class="skills-bar">
             <div class="bar"></div>
           </div>
         </li>
-        <li data-percent="80"><span>Git</span>
+        <li data-percent="60"><span>C++/C#</span>
+          <div class="skills-bar">
+            <div class="bar"></div>
+          </div>
+        </li>
+        <li data-percent="99"><span>PL/SQL</span>
+          <div class="skills-bar">
+            <div class="bar"></div>
+          </div>
+        </li>
+        <li data-percent="70"><span>Bash</span>
+          <div class="skills-bar">
+            <div class="bar"></div>
+          </div>
+        </li>
+        <li data-percent="100"><span>Git</span>
           <div class="skills-bar">
             <div class="bar"></div>
           </div>
@@ -95,41 +113,118 @@
     <div class="skills-soft">
       <h3><i class="fas fa-bezier-curve"></i>Conocimientos De Softwares</h3>
       <ul>
-        <li data-percent="90">
+        <li>
           <svg viewbox="0 0 100 100">
             <circle cx="50" cy="50" r="45"></circle>
             <circle class="cbar" cx="50" cy="50" r="45"></circle>
-          </svg><span>VSCode</span><small></small>
+          </svg>
+          <span><a href="https://www.linux.org" target="_blank">Linux</a></span>
         </li>
-        <li data-percent="75">
+        <li>
           <svg viewbox="0 0 100 100">
             <circle cx="50" cy="50" r="45"></circle>
             <circle class="cbar" cx="50" cy="50" r="45"></circle>
-          </svg><span>Eclipse</span><small></small>
+          </svg>
+          <span><a href="https://www.servicenow.com" target="_blank">ServiceNow</a></span>
         </li>
-        <li data-percent="85">
+        <li>
           <svg viewbox="0 0 100 100">
             <circle cx="50" cy="50" r="45"></circle>
             <circle class="cbar" cx="50" cy="50" r="45"></circle>
-          </svg><span>Base X</span><small></small>
+          </svg>
+          <span><a href="https://code.visualstudio.com" target="_blank">VsCode</a></span>
         </li>
-        <li data-percent="40">
+        <li>
           <svg viewbox="0 0 100 100">
             <circle cx="50" cy="50" r="45"></circle>
             <circle class="cbar" cx="50" cy="50" r="45"></circle>
-          </svg><span>ArgoUML</span><small></small>
+          </svg>
+          <span><a href="https://visualstudio.microsoft.com/es/" target="_blank">VisualStudio</a></span>
         </li>
+        <li>
+          <svg viewbox="0 0 100 100">
+            <circle cx="50" cy="50" r="45"></circle>
+            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+          </svg>
+          <span><a href="https://www.eclipse.org" target="_blank">Eclipse</a></span>
+        </li>
+        <li>
+          <svg viewbox="0 0 100 100">
+            <circle cx="50" cy="50" r="45"></circle>
+            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+          </svg>
+          <span><a href="https://en.wikipedia.org/wiki/Remote_Desktop_Protocol" target="_blank">Microsoft</a></span>
+          <small>RDP</small>
+        </li>
+        <li>
+          <svg viewbox="0 0 100 100">
+            <circle cx="50" cy="50" r="45"></circle>
+            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+          </svg>
+          <span><a href="https://www.beyondtrust.com" target="_blank">BeyondTrust</a></span>
+          <small>RemoteSupport</small>
+        </li>
+        <li>
+          <svg viewbox="0 0 100 100">
+            <circle cx="50" cy="50" r="45"></circle>
+            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+          </svg>
+          <span><a href="https://www.teamviewer.com/es/" target="_blank">TeamViewer</a></span>
+        </li>
+        <li>
+          <svg viewbox="0 0 100 100">
+            <circle cx="50" cy="50" r="45"></circle>
+            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+          </svg>
+          <span><a href="https://www.postman.com" target="_blank" rel="noopener noreferrer">Postman</a></span>
+        </li>
+        <li>
+          <svg viewbox="0 0 100 100">
+            <circle cx="50" cy="50" r="45"></circle>
+            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+          </svg>
+          <span><a href="https://www.jenkins.io" target="_blank" rel="noopener noreferrer">Jenkins</a></span>
+        </li>
+        <li>
+          <svg viewbox="0 0 100 100">
+            <circle cx="50" cy="50" r="45"></circle>
+            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+          </svg>
+          <span><a href="https://github.com/apps/desktop" target="_blank" rel="noopener noreferrer">GitHub</a></span>
+          <small>Desktop</small>
+        </li>
+        <li>
+          <svg viewbox="0 0 100 100">
+            <circle cx="50" cy="50" r="45"></circle>
+            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+          </svg>
+          <span><a href="https://www.microsoft.com/es-es/windows-server" target="_blank" rel="noopener noreferrer">Windows</a></span>
+          <small>Server</small>
+        </li>
+        <li>
+          <svg viewbox="0 0 100 100">
+            <circle cx="50" cy="50" r="45"></circle>
+            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+          </svg>
+          <span><a href="https://www.docker.com" target="_blank" rel="noopener noreferrer">Docker</a></span>
+        </li>
+        <li>
+          <svg viewbox="0 0 100 100">
+            <circle cx="50" cy="50" r="45"></circle>
+            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+          </svg>
+          <span><a href="https://kubernetes.io" target="_blank" rel="noopener noreferrer">Kubernetes</a></span>
+        </li>
+        <li>
+          <svg viewbox="0 0 100 100">
+            <circle cx="50" cy="50" r="45"></circle>
+            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+          </svg>
+          <span><a href="https://nginx.org/en/" target="_blank" rel="noopener noreferrer">Nginx</a></span>
+        </li>
+        
+        <!-- Add more software skills here as needed -->
       </ul>
-    </div>
-    <div class="interests">
-      <h3><i class="fas fa-star"></i>Intereses</h3>
-      <div class="interests-items">
-        <div class="art"><i class="fas fa-palette"></i><span>Arte</span></div>
-        <div class="art"><i class="fas fa-book"></i><span>Libros</span></div>
-        <div class="movies"><i class="fas fa-film"></i><span>Cine</span></div>
-        <div class="music"><i class="fas fa-headphones"></i><span>Musica</span></div>
-        <div class="games"><i class="fas fa-gamepad"></i><span>VideoJuegos</span></div>
-      </div>
     </div>
   </div>
 </div>
