--- a/html/resumen.html
+++ b/html/resumen.html
@@ -30,7 +30,7 @@
     <div class="contact">
       <h3>Contacto</h3>
       <div class="call"><a href="tel:123-456-7890"><i class="fas fa-phone"></i><span>604-840-097</span></a></div>
-      <div class="address"><a href="https://goo.gl/maps/fiTBGT6Vnhy"><i class="fas fa-map-marker"></i><span>Madrid</span></a>
+      <div class="address"><a href="https://www.google.com/maps/place/Madrid/"><i class="fas fa-map-marker"></i><span>Madrid</span></a>
       </div>
       <div class="email"><a href="mailto:javiermenendeza0112@gmail.com"><i class="fas fa-envelope"></i><span>Javier Menéndez</span></a></div>
       <div class="website"><a href="https://github.com/darkone0112" target="_blank"> <i class="fa-solid fa-code-commit"></i><span>GitHub</span></a></div>
